--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,29 +18,59 @@
     }
 
     // Regular
-
+    console.log('hello');
     // Interpolated
+    const name = 'Cydnie';
 
+    console.log(`My name is ${name}`);
     // Styled
-
+    console.log('%c Today it rained', 'color: blue; font-size: 50px;');
     // warning!
-
+    console.warn('WATCH OUT!!!');
     // Error :|
-
+    console.error('Crap!');
     // Info
-
+    console.info('Berlin is the capital of Germany.');
     // Testing
-
+    const p = document.querySelector('p');
+    console.assert(1 === 2, 'That is wrong!');
     // clearing
-
+    console.clear();
     // Viewing DOM Elements
+    console.log(p);
+    console.dir(p);
 
+    console.clear();
     // Grouping together
-
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old.`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old.`);
+      console.groupEnd(`${dog.name}`);
+    });
     // counting
-
+    console.count('Cydnie');
+    console.count('Christian');
+    console.count('Cydnie');
+    console.count('Christian');
+    console.count('Christian');
+    console.count('Christian');
+    console.count('Cydnie');
+    console.count('Cydnie');
+    console.count('Cydnie');
+    console.count('Christian');
+    console.count('Christian');
     // timing
+    console.time('fetching data');
+    fetch('https:api.github.com/users/cydseelen')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
 
+      console.table(dogs);
   </script>
 </body>
 </html>
